--- a/QoutationProject/App.config
+++ b/QoutationProject/App.config
@@ -2,10 +2,16 @@
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
+      <section name="QoutationProject.MainSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <applicationSettings>
+    <QoutationProject.MainSettings>
+      <setting name="ConnectionString" serializeAs="String">
+        <value>Data Source = </value>
+      </setting>
+    </QoutationProject.MainSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DefaultAppSkin" serializeAs="String">
         <value>Skin/WXI</value>
