--- a/QoutationProject/QoutationProject.csproj
+++ b/QoutationProject/QoutationProject.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="kamilsoft logo - Print.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
