--- a/QoutationProject/App.config
+++ b/QoutationProject/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -6,6 +6,9 @@
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="Database" connectionString="XpoProvider=SQLite;Data Source=D:\Projects\Qoutation\QoutationProject\bin\Debug\net8.0-windows\Qoutation\Database.db" />
+  </connectionStrings>
   <applicationSettings>
     <QoutationProject.MainSettings>
       <setting name="ConnectionString" serializeAs="String">
